--- a/variational-classifier-parity-pennylane.ipynb
+++ b/variational-classifier-parity-pennylane.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,6 +277,61 @@
     "num_layers = 2\n",
     "weights_init = .01 * rng.normal(size=(num_layers, n_qubits, 3), requires_grad=True)\n",
     "bias_init = np.array(0., requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: ─╭BasisState(M0)──Rot(0.00,-0.00,0.01)──╭●───────╭X──Rot(-0.02,-0.00,-0.01)─╭●───────╭X─┤  <Z>\n",
+      "1: ─├BasisState(M0)──Rot(0.00,-0.01,0.00)──╰X─╭●────│───Rot(-0.01,-0.01,-0.00)─╰X─╭●────│──┤     \n",
+      "2: ─├BasisState(M0)──Rot(0.01,0.01,-0.01)─────╰X─╭●─│───Rot(0.00,0.01,-0.00)──────╰X─╭●─│──┤     \n",
+      "3: ─╰BasisState(M0)──Rot(-0.01,-0.01,0.00)───────╰X─╰●──Rot(0.01,-0.01,0.00)─────────╰X─╰●─┤     \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(qml.draw(circuit)(weights_init, X[0,:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor(0.99987381, requires_grad=True),\n",
+       " tensor(-0.99987381, requires_grad=True),\n",
+       " tensor(0.99987436, requires_grad=True),\n",
+       " tensor(-0.99987436, requires_grad=True),\n",
+       " tensor(-0.99987381, requires_grad=True),\n",
+       " tensor(0.99987381, requires_grad=True),\n",
+       " tensor(-0.99987436, requires_grad=True),\n",
+       " tensor(0.99987436, requires_grad=True),\n",
+       " tensor(-0.99987436, requires_grad=True),\n",
+       " tensor(0.99987436, requires_grad=True),\n",
+       " tensor(-0.99987381, requires_grad=True),\n",
+       " tensor(0.99987381, requires_grad=True),\n",
+       " tensor(0.99987436, requires_grad=True),\n",
+       " tensor(-0.99987436, requires_grad=True),\n",
+       " tensor(0.99987381, requires_grad=True),\n",
+       " tensor(-0.99987381, requires_grad=True)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[variational_classifier(weights_init, bias_init, x) for x in X]"
    ]
   },
   {
@@ -362,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
